--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -7,3 +7,14 @@
   display: flex;
   flex-direction: row;
 }
+
+@mixin cardAuth {
+  top: -2046px;
+  left: -1771px;
+  border-radius: 10px;
+  border-radius: 10px;
+  background: #fff;
+  box-shadow:
+    4px 4px 20px 0px rgba(0, 0, 0, 0.25),
+    0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
