--- a/src/components/CardPost/style.module.scss
+++ b/src/components/CardPost/style.module.scss
@@ -8,10 +8,15 @@
   box-shadow: 0px 0px 15px 0px rgba(82, 82, 82, 0.18);
   display: flex;
   flex-direction: column;
-  @include apply-at-xs-size {
-    width: 180px;
-    height: 312px;
+  margin: 0px 0px 30px 0px;
+  width: 160px;
+  height: 312px;
+
+  @include apply-at-md-size {
+    width: 300px;
+    height: 362px;
   }
+
   @include apply-at-xl-size {
     width: 300px;
     height: 362px;
@@ -23,6 +28,16 @@
 
   .image-container {
     position: relative;
+
+    img {
+      height: 100px;
+      background-size: cover;
+
+      @include apply-at-xl-size {
+        height: 180px;
+      }
+    }
+
     .bookmark {
       padding: 10px;
       background-color: white;
@@ -39,8 +54,16 @@
         height: 10px;
       }
       @include apply-at-xl-size {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
+      }
+      img {
+        width: 15px;
+        height: 15px;
+        @include apply-at-xl-size {
+          width: 20px;
+          height: 20px;
+        }
       }
     }
   }
