--- a/src/pages/Post/style.module.scss
+++ b/src/pages/Post/style.module.scss
@@ -1,7 +1,30 @@
 @import '@styles/base';
 
+.error {
+  @include error-validation;
+}
+
 .container {
   height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  @include apply-at-lg-size {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .title {
+    font-family: Roboto;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 56px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin: 40px 0px;
+    @include apply-at-lg-size {
+      padding-left: 30px;
+    }
+  }
 
   .uploader {
     display: flex;
@@ -27,12 +50,21 @@
       button {
         width: fit-content;
       }
+
+      img {
+        height: 60%;
+      }
+
+      input {
+        display: none;
+      }
     }
 
     .upload-title {
       display: flex;
       flex-direction: column;
       width: 100%;
+      margin: 30px 0px;
 
       .label {
         font-family: Poppins;
@@ -49,6 +81,7 @@
         left: 90px;
         border-radius: 5px;
         border: 1px;
+        padding-left: 20px;
       }
     }
 
@@ -56,6 +89,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      margin: 30px 0px;
 
       .label {
         font-family: Poppins;
@@ -71,6 +105,7 @@
         left: 90px;
         border-radius: 5px;
         border: 1px;
+        padding-left: 20px;
       }
     }
 
