--- a/src/pages/Profile/style.module.scss
+++ b/src/pages/Profile/style.module.scss
@@ -2,6 +2,12 @@
 
 .container {
   height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  .title {
+    margin-top: 100px;
+  }
 
   .content-wrapper {
     display: grid;
@@ -23,12 +29,45 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 20px 0px;
+
+    .text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 10px 0px;
+
+      .text1 {
+        font-family: Roboto;
+        font-size: 24px;
+        font-weight: 900;
+        line-height: 28px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+
+      .text2 {
+        font-family: Roboto;
+        font-size: 18px;
+        font-style: italic;
+        font-weight: 100;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+    }
 
     > img {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       border-radius: 100%;
       background-size: cover;
+      margin: 10px 0px;
+      @include apply-at-lg-size {
+        width: 200px;
+        height: 200px;
+      }
     }
   }
 }
