--- a/src/components/CardPost/style.module.scss
+++ b/src/components/CardPost/style.module.scss
@@ -49,6 +49,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
       @include apply-at-xs-size {
         width: 10px;
         height: 10px;
@@ -57,6 +58,7 @@
         width: 30px;
         height: 30px;
       }
+
       img {
         width: 15px;
         height: 15px;
@@ -65,6 +67,11 @@
           height: 20px;
         }
       }
+    }
+
+    .bookmark-active {
+      @extend .bookmark;
+      background-color: #fece00;
     }
   }
 
